Fix width for `.dropdown-collapse-full`

--- a/scss/components/_dropdowns.scss
+++ b/scss/components/_dropdowns.scss
@@ -94,7 +94,7 @@
 
         &.dropdown-full .dropdown-menu { width: 100%; }
 
-        &.dropdown-collapse-full .dropdown-menu { width: auto; }
+        &.dropdown-collapse-full .dropdown-menu { width: 200px; }
       }
     }
 
